--- a/src/components/about/PhysicsSkills/PhysicsSkills.module.css
+++ b/src/components/about/PhysicsSkills/PhysicsSkills.module.css
@@ -140,15 +140,21 @@
   }
 
   .object {
-    font-size: 1rem;
-    padding: 1rem 1.5rem;
+    padding: 5rem 1.5rem;
     border-radius: 8px;
+  }
+
+  .object p {
+    font-size: 2.5rem;
   }
 }
 
 @media (max-width: 480px) {
   .header h3 {
-    font-size: 2rem;
+    font-size: 4rem;
+  }
+  .header h3 br {
+    display: none;
   }
   .skillsPlayground {
     min-height: 400px;
