--- a/src/components/home/Intro/IntroSection.module.css
+++ b/src/components/home/Intro/IntroSection.module.css
@@ -1,4 +1,3 @@
-/* INTRO SECTION STYLES */
 .intro {
   position: relative;
   width: 100%;
@@ -32,6 +31,9 @@
   min-height: 100svh;
   z-index: 1;
   contain: layout style paint;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .intro_card {
@@ -63,13 +65,10 @@
   transform: translateZ(0);
 }
 
-/* PRIMEIRO CARD - CENTRALIZADO */
 .intro_one .intro_card_inner {
   justify-content: center;
   gap: 8rem;
 }
-
-/* SEGUNDO CARD - DISTRIBUÍDO */
 .intro_two .intro_card_inner {
   justify-content: flex-start;
   padding-top: 12rem;
@@ -77,7 +76,6 @@
   text-align: left;
 }
 
-/* TYPOGRAPHY */
 .intro_card_caption span {
   display: block;
   font-family: "SF Mono", "Monaco", "Inconsolata", monospace;
@@ -384,20 +382,16 @@
     font-size: 2rem;
   }
 
-  .intro_card_description p {
-    font-size: 1.6rem;
-  }
-
-  .connect_button {
-    font-size: 1.3rem;
-    padding: 1.6rem 2.5rem;
+  .intro_card_description p,
+  .intro_two .intro_card_description p {
+    font-size: 2.5rem;
   }
 
   .icon_button .icon {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
   .icon_button .icon_label {
-    font-size: 1.4rem;
+    font-size: 2rem;
   }
 }
 
