--- a/src/components/work/FeaturedWork/FeaturedWork.module.css
+++ b/src/components/work/FeaturedWork/FeaturedWork.module.css
@@ -484,11 +484,16 @@
   }
 
   .projectOverlay h3 {
-    font-size: 1.8rem;
+    font-size: 2rem;
   }
 
-  .projectOverlay p {
-    font-size: 0.95rem;
+  .projectOverlay p,
+  .projectOverlay span {
+    font-size: 1.5rem;
+  }
+
+  .projectLink {
+    font-size: 1.5rem;
   }
 
   .projectInfo {
